--- a/css/styles.css
+++ b/css/styles.css
@@ -6,7 +6,11 @@ body{
     justify-content: center;
     align-items: center;
     gap: 40px;
-    background-image: linear-gradient(hsl(273, 75%, 66%),hsl(240, 73%, 65%));
+    background-color: transparent;
+    background: linear-gradient(hsl(273, 75%, 66%),hsl(240, 73%, 65%)); 
+    background-repeat: no-repeat; 
+    background-size: contain; 
+    height: 100%;
 }
 
 h1,h2,h3,h4,h5,h6{
@@ -26,6 +30,7 @@ p{
 a{
     text-decoration: none;
     color: white;
+    cursor: pointer;
 }
 
 footer{
